--- a/_sass/_pages.scss
+++ b/_sass/_pages.scss
@@ -258,3 +258,13 @@
     font-weight: 900;
   }
 }
+
+@media screen and (max-width: $break-small) {
+  .case-study-quote {
+    padding: 60px 30px;
+
+    .quote {
+      font-size: 1rem;
+    }
+  }
+}
